gccida/g1/check_format_info_main
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2085:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *info, 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2109:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 *p_width_wanted_type; // r14 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2119:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2171:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node **type; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2172:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v88; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2187:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v103; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2220:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v137; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2230:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 *last_wanted_type; // [rsp+38h] [rbp-270h] 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2231:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version length_chars_std; // [rsp+48h] [rbp-260h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2232:1: error: must use 'enum' tag to refer to type 'format_lengths'
format_lengths length_chars_val; // [rsp+4Ch] [rbp-25Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2235:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 *v155; // [rsp+70h] [rbp-238h] 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2236:1: error: must use 'enum' tag to refer to type 'format_type'
format_type format_type; // [rsp+78h] [rbp-230h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2240:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 width_wanted_type; // [rsp+B0h] [rbp-1F8h] BYREF 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2241:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 precision_wanted_type; // [rsp+F0h] [rbp-1B8h] BYREF 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2242:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 main_wanted_type; // [rsp+130h] [rbp-178h] BYREF 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2434:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v132[1]] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2437:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)*format[0]] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2444:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[( unsigned __int8)*v38] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/c-format.c:2515:32: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( flags & 0x40) == 0 && ( sch_istable[( unsigned __int8)v134[1]] & 4) == 0 ) 
                               ^~~~~~~~~~~
                               _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_format_info_main/src/obj/c-format.o] Error 1
